--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Essays'
 - !lcsh 'Natural history -- Outdoor books'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: 'An April day -- Under the apple boughs -- Along the road: I -- Along
   the road: II -- The open fields -- Earth and sky -- The mystery of night -- Off
   shore -- A mountain rivulet -- The earliest insights -- The heart of the woods --
